--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "D:/KSMobile/KSMFlutter/ksmobile/linux"
+    "cmake.sourceDirectory": "D:/KSMobile/KSMFlutter/Mobile Pelanggan/linux"
 }
