--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ksmobile
+name: Mobile
 description: "A new Flutter project."
 
 publish_to: 'none'
@@ -15,6 +15,7 @@ dependencies:
   qr_flutter: ^4.1.0
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
